<resources>
    <string name="app_name">VideoCall</string>

    <string name="voximplant_com">.voximplant.com</string>

    <string name="action_sign_in">LOG IN</string>
    <string name="action_call">CALL</string>
    <string name="action_sign_in_token">LOG IN WITH TOKEN</string>
    <string name="prompt_login">USER@APP.ACCOUNT</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="welcome_label_text">VideoCall Demo</string>

    <string name="logging_in">Logging in…</string>
    <string name="empty_field_warning">Field must not be empty</string>
    <string name="invalid_username_warning">Invalid username</string>
    <string name="invalid_password_warning">Invalid password</string>

    <string name="alert_select_audio_device">Audio device</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>
    <string name="incoming_call">Incoming call</string>
    <string name="enable_video_button">enable video button</string>
    <string name="hold_button">hold button</string>
    <string name="hangup_button">hangup button</string>
    <string name="change_audio_device_button">change audio device button</string>
    <string name="mute_button">mute button</string>
    <string name="hold">Hold</string>
    <string name="audio">Audio</string>
    <string name="cam">Cam</string>
    <string name="mic">Mic</string>
    <string name="hangup">Hangup</string>
    <string name="cancel">Cancel</string>
    <string name="call_back">Call back</string>
    <string name="call_failed">Call failed</string>
    <string name="logo">logo</string>
    <string name="call_to">Call to</string>
    <string name="logout_button">logout button</string>
    <string name="loading">Loading…</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="sharing">Sharing</string>
    <string name="screen_sharing_min_api_warning">Screen sharing works on Android API >= 21</string>
</resources>
