<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    tools:context=".stories.call.CallActivity">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/remote_video_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:foregroundGravity="center"
        android:visibility="invisible"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/control_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/local_video_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/mute_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/call_option_default_back"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/mute_button_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/mute_button"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_micon"
                    app:tint="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/mute_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/mic"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/audio_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/call_option_default_back"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/audio_button_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/change_audio_device_button"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_audio"
                    app:tint="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/audio_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/audio"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/hold_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/call_option_default_back"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/hold_button_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hold_button"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_call_hold"
                    app:tint="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/hold_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/hold"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/sharing_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/call_option_default_back"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/sharing_button_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/enable_video_button"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_screensharingicon"
                    app:tint="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sharing_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/sharing"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/video_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/call_option_default_back"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/video_button_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/enable_video_button"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_camon"
                    app:tint="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/video_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/cam"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/hangup_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginHorizontal="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/call_option_default_back"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/hangup_button_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hangup_button"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_call_decline"
                    app:tint="@color/colorRed" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/hangup_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/hangup"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>